<resources>
    <string name="app_name">Photourism</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Photourism</string>
    <string name="nav_header_authors">Rúben Poupado (20966) &amp; Rodrigo Maia (21897)</string>
    <string name="nav_header_class">Engenharia Informática - Desenvolvimento de Aplicações Móveis</string>
    <string name="nav_header_period">2022/2023</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Galeria</string>
    <string name="menu_camera">Câmara</string>
    <string name="menu_map">Mapa</string>
    <string name="BtPhoto">tirar foto</string>
    <string name="GalleryDir"> file:///storage/emulated/0/Android/media/com.example.photourism/Photourism/</string>
    <string name="menu_info">Info</string>
    <string name="info_autores">Autores</string>
</resources>